<resources>
    <string name="app_name">Application_wk</string>
    <string name="test">This is a test text</string>
    <string name="title">温度转换</string>
    <string name="value_hint">请输入温度值</string>
    <string name="celsius_to_fahren">摄氏转华氏</string>
    <string name="fahren_to_celsius">华氏转摄氏</string>
    <string name="msg_error_input">请输入有效温度值</string>
    <string name="fahren">华氏</string>
    <string name="celsius">摄氏</string>
    <string name="to_fahren">度->华氏温度</string>
    <string name="to_celsius">度->摄氏温度</string>
</resources>

